--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,6 @@ body{
     background-color: black;
 }
 
-header img {
-    width: 100%;
-    height: auto;
-}
-
 nav{
     font-family: helvetica;
     list-style:none;
@@ -45,6 +40,7 @@ nav ul li .active {
 a:link {
     text-decoration: none;
 }
+
 a:hover{
     background-color: #ff68ff;
     color: white;
@@ -57,6 +53,10 @@ body.eye a.eye, body.ear a.ear, body.mouth a.mouth {
     border-radius: 20px;
 }
 
+#header img {
+    width: 100%;
+    height: auto;
+}
 
 @media screen and (min-width: 600px) {
     h1:after{
